Adapt the PR to Java 8